Fixed spacing for the link buttons

--- a/src/styles/account-sub-components/header.css
+++ b/src/styles/account-sub-components/header.css
@@ -12,7 +12,7 @@ h1 {
   margin: 0;
 }
 
-@media screen and (min-width: 320px) and (max-width: 575.98px) {
+@media screen and (min-width: 53px) and (max-width: 575.98px) {
 #header {
   display: grid;
   grid-template-rows: .6fr 1fr .3fr;
@@ -107,7 +107,7 @@ h1 {
 #links {
   grid-area: links;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   height: 60px;
   background-color: var(--component-cards-color);
@@ -121,6 +121,7 @@ h1 {
   width: 25%;
   height: 100%;
   border-width: 3px;
+  margin-left: 15px;
   background-color: var(--component-cards-color);
   border-color: transparent;
 }
@@ -153,6 +154,7 @@ h1 {
   width: 25%;
   height: 100%;
   border-width: 3px;
+  margin-right: 15px;
   background-color: var(--component-cards-color);
   border-color: transparent;
 }
