--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -52,7 +52,7 @@ a {
 }
 /* I am starting with the smallest screen size -- Im thinking global reach for Androids in 3rd world countries*/
 
-@media screen and (min-width: 320px) and (max-width: 575.98px) {
+@media screen and (min-width: 0px) and (max-width: 575.98px) {
 /* @media screen and (min-width: 344px) and (max-width: 430px) { */
   #navBar {
     display: grid;
